2011-05-15  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/dl-osinfo.h (_dl_setup_stack_chk_guard):
	Use non-cancelable interfaces.

	[BZ #9809]
	* locale/iso-639.def: Add entry for Sorani.

	[BZ #11901]
	* include/stdlib.h: Move include protection to the right place.
	Define abort_msg_s.  Declare __abort_msg with it.
	* stdlib/abort.c (__abort_msg): Adjust type.
	* assert/assert.c (__assert_fail_base): New function.  Majority
	of code from __assert_fail.  Allocate memory for __abort_msg with
	mmap.
	(__assert_fail): Now call __assert_fail_base.
	* assert/assert-perr.c: Remove bulk of implementation.  Use
	__assert_fail_base.
	* include/assert.hL Declare __assert_fail_base.
	* sysdeps/posix/libc_fatal.c: Allocate memory for __abort_msg with
	mmap.
	* sysdeps/unix/sysv/linux/libc_fatal.c: Likewise.

2011-05-14  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11952]
	[BZ #12453]
	* elf/dl-open.c (dl_open_worker): Delay calls to _dl_update_slotinfo
	until all modules are registered in the DTV.
	* elf/Makefile: Add rules to build and run tst-tls19.
	* elf/tst-tls19.c: New file.
	* elf/tst-tls19mod1.c: New file.
	* elf/tst-tls19mod2.c: New file.
	* elf/tst-tls19mod3.c: New file.
	Patch mostly by Martin von Gagern <Martin.vGagern@gmx.net>.

	[BZ #12083]
	* sysdeps/pthread/aio_misc.c (__aio_init): Compute optim.aio_num
	correctly.

	[BZ #12601]
	* iconvdata/cp932.c (BODY to UCS4): Fix incrementing inptr in case of
	two-byte sequence errors.
	* iconvdata/Makefile (tests): Add bug-iconv8.
	* iconvdata/bug-iconv8.c: New file.

	[BZ #12626]
	* sysdeps/generic/elf/backtracesymsfd.c (__backtrace_symbols_fd): Move
	buf2 definition.

	* libio/fileops.c (_IO_new_file_close_it): Initialize write_status.

	[BZ #12432]
	* sysdeps/ia64/backtrace.c (struct trace_reg): Add cfa element.
	(dummy_getcfa): New function.
	(init): Get _Unwind_GetCFA address, use dummy if not found.
	(backtrace_helper): In recursion check, also check whether CFA changes.